Q versus Rule Based works correctly
All the rules of the game are implemented correctly now (verifyable with println() commands) and there is a randomized start. I don't know about the rewards and alpha and gamma values, but I've currently tried many, yet not seen improvement.